freebsd-quota (8.2-2) UNRELEASED; urgency=low

  * Add missing freebsd-buildutils to Build-Depends.
  * Replace portmap Suggests with rpcbind.
  * Now using Standards-Version 3.9.4 (no changes needed).
  * Switch from patching the source to use the libbsd overlay, this fixes
    a FTBFS with newer libbsd that moved away libutil.h.
  * Switch from dh sequencer to a proper explicit debhelper rules file.
    dh does not cope well with setting the PATH variable.
  * Switch to debhelper compatibility level 9.

 -- Guillem Jover <guillem@debian.org>  Wed, 01 May 2013 16:42:02 +0200

freebsd-quota (8.2-1) unstable; urgency=low

  [ Mats Erik Andersson ]
  * Initial release. (Closes: #611143)

  [ Guillem Jover ]
  * Now using Standards-Version 3.9.2 (no changes needed).
  * Refactor source name into SOURCE in debian/rules.
  * Line-wrap CFLAGS and PMAKE variables in debian/rules.
  * Add myself to Uploaders.

 -- Mats Erik Andersson <mats.andersson@gisladisker.se>  Mon, 28 Feb 2011 18:29:17 +0100