@@ -9,10 +9,13 @@ DESTDIR = $(CURDIR)/debian/tmp
 ORIGDIR = $(SOURCE)-$(VERSION)
 TARNAME = $(SOURCE)_$(VERSION).orig.tar.gz
 
-CFLAGS = -Wall -g -pipe -fPIC -I. -D_GNU_SOURCE \
+CFLAGS = $(shell dpkg-buildflags --get CPPFLAGS) -I. -D_GNU_SOURCE \
+         $(shell dpkg-buildflags --get CFLAGS) -Wall -pipe -fPIC \
          $(shell pkg-config --cflags libbsd-overlay)
-PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" NO_WERROR=1 NOGCCERROR=1 \
-        NOSHARED=NO NO_SHARED=NO DESTDIR=$(DESTDIR) make
+LDFLAGS = $(shell dpkg-buildflags --get LDFLAGS)
+PMAKE = COPTS="$(CFLAGS)" CFLAGS="$(CFLAGS)" LDFLAGS="$(LDFLAGS)" \
+        NO_WERROR=1 NOGCCERROR=1 NOSHARED=NO NO_SHARED=NO \
+        DESTDIR=$(DESTDIR) make
 
 PROGS_DEP = \
   sbin/fsck \
