@@ -8,6 +8,8 @@ freebsd-quota (8.2-2) UNRELEASED; urgency=low
   * Switch from dh sequencer to a proper explicit debhelper rules file.
     dh does not cope well with setting the PATH variable.
   * Switch to debhelper compatibility level 9.
+  * Use dpkg-buildflags to set CPPFLAGS, CFLAGS and LDFLAGS, thus enabling
+    hardening flags.
 
  -- Guillem Jover <guillem@debian.org>  Wed, 01 May 2013 16:42:02 +0200
 
